[package]
name = "virt-hid"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
debug = ["tempfile"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
nix = { version = "0.25.0", features = ["poll"] }
num_enum = "0.5.7"
tempfile = { version = "3", optional = true }
gen_layouts_sys = { workspace = true }
keyboard-layouts = { workspace = true }
